--- a/facy/facy.UWP/project.json
+++ b/facy/facy.UWP/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "FireSharp": "2.0.4",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Microsoft.ProjectOxford.Face": "1.3.0",
     "Xamarin.Forms": "2.0.0.6482"
