sube datos de lentes y emocion

--- a/facy/facy.UWP/facy.UWP.csproj
+++ b/facy/facy.UWP/facy.UWP.csproj
@@ -93,12 +93,16 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="anteojos.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FechaActual.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="newEmocion.cs" />
+    <Compile Include="newView.cs" />
     <Compile Include="persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Todo.cs" />
